--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://surbhir894.github.io/React-Todo-Tailwind",
   "name": "react-todo-app",
   "private": true,
   "version": "0.0.0",
